# smart-diff-ci

./: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  action.yml  install_and_run.sh
.agents/rules/: rules.md
.agents/workflows/: workflows.md
.github/workflows/: release.yml
npm/: README.md  install.js  package-lock.json  package.json
src/: config.rs  crawler.rs  git.rs  graph.rs  main.rs  parser.rs
